Fixed squashed profile images on iphones

--- a/css/team_media.css
+++ b/css/team_media.css
@@ -9,6 +9,12 @@
     width: 17em;
   }
 
+  .profileimg {
+    height: auto;
+    max-width: 100%;
+    width: 16em;
+  }
+
   .profileheading {
     align-self: center;
   }
